--- a/02-scripts.backup/MID_metadata_graphs.Rmd
+++ b/02-scripts.backup/MID_metadata_graphs.Rmd
@@ -133,11 +133,11 @@ full_metadata %>%
 full_metadata %>%
   filter(str_detect(Library_ID, "MID")) %>%
   drop_na(Pipenotch) %>%
-  ggplot(., aes(x = factor(Max_Perio_Score), y = Age, color = Sex, shape = Pipenotch, size = `%AMTL`)) +
-    ggpointgrid::geom_pointrect(scale_x = 0.16, scale_y = 0.18) +
+  ggplot(., aes(x = factor(Max_Perio_Score), y = Age, color = Pipenotch, shape = Sex, size = `%AMTL`)) +
+    ggpointgrid::geom_pointrect(scale_x = 0.21, scale_y = 0.24) +
     theme_minimal() +
-    scale_shape_manual(values = c(15, 7)) +
-    scale_color_manual(values = c("green","yellow","gray")) +
+    scale_shape_manual(values = c(10, 9, 12)) +
+    scale_color_manual(values = c("blue","red","gray")) +
     theme(axis.text = element_text(size = 10)) +
     xlab("Max. periodontitis score") +
     ylab("Age group")
@@ -151,9 +151,9 @@ full_metadata %>%
   filter(str_detect(Library_ID, "MID")) %>%
   drop_na(Pipenotch) %>%
   ggplot(., aes(x = Pipenotch, y = Age, color = Peridontal_affect_score, shape = Sex, size = `%AMTL`)) +
-    ggpointgrid::geom_pointrect(scale_x = 0.14, scale_y = 0.22) +
+    ggpointgrid::geom_pointrect(scale_x = 0.14, scale_y = 0.26) +
     theme_minimal() +
-    # scale_shape_manual(values = c(15, 7)) +
+    scale_shape_manual(values = c(10, 9, 12)) +
     scale_colour_gradient(low = "blue", high = "red") +
     # scale_color_manual(values = microshades_palette("micro_green")) +
     theme(axis.text = element_text(size = 10)) +
